poprawka widoczności listy produktów, dodałem dynamiczny tag promocji oraz cenę opcjonalną poprawiłem działanie ikon w filtrowaniu

--- a/temp.html
+++ b/temp.html
@@ -1,13 +1,13 @@
-<div class="dropdown-wrapper d-flex flex-row justify-content-around px-2 py-1">
+<div class="dropdown-wrapper  justify-content-around px-2 py-1 d-none d-md-flex flex-row">
     <div class="filter float-left md:float-none">
         <button class="filter-dropdown-trigger px-2 py-1">
-            Filtrowanie
+            <span class="mr-2"> Filtrowanie</span> <i class="fa fa-chevron-down"></i>
         </button>
 
     </div>
     <div class="sort ml-5">
         <button class="sort-dropdown-trigger py-1">
-            Sortowanie
+            <span class="mr-2"> Sortowanie</span> <i class="fa fa-chevron-down"></i>
         </button>
 
     </div>
