--- a/dist2/index.html
+++ b/dist2/index.html
@@ -6718,18 +6718,18 @@
                     <div class="product col-6 col-sm-4 pt-3 pb-md-3" data-product_id="29" data-product_page="0"><a
                             class="product__icon d-flex justify-content-center align-items-center" data-product-id="29"
                             href="https://www.konesso.pl/product-pol-29-Kawa-ziarnista-Bazzara-DODICIGRANCRU-1kg.html"
-                            title="Kawa ziarnista Bazzara DODICIGRANCRU 1kg">
+                            title="Kawa ziarnista MkCafe 1 KG">
                             <picture>
                                 <source media="(max-width: 420px)" srcset="./assets/Kawa.jpg " />
-                                <img src="./assets/Kawa.jpg" alt="Kawa ziarnista Bazzara DODICIGRANCRU 1kg" />
+                                <img src="./assets/Kawa.jpg" alt="Kawa ziarnista MkCafe 1 KG" />
                             </picture><strong class="label_icons"><span class="label --promo">
                                     W promocji
                                 </span></strong>
                         </a>
                         <h3><a class="product__name"
                                 href="https://www.konesso.pl/product-pol-29-Kawa-ziarnista-Bazzara-DODICIGRANCRU-1kg.html"
-                                title="Kawa ziarnista Bazzara DODICIGRANCRU 1kg" style="min-height: 39px;">Kawa
-                                ziarnista Bazzara DODICIGRANCRU 1kg</a></h3>
+                                title="Kawa ziarnista MkCafe 1 KG" style="min-height: 39px;">Kawa
+                                ziarnista MkCafe 1 KG</a></h3>
 
                         <div class="product__prices --omnibus --omnibus-short" style="min-height: 110.375px;"><span
                                 class="price --max"><del>164,99 zł<span class="price_vat"> brutto</span></del><span
@@ -7408,7 +7408,7 @@
             });
             ga('ec:addImpression', {
                 id: '29',
-                name: 'Kawa ziarnista Bazzara DODICIGRANCRU 1kg',
+                name: 'Kawa ziarnista MkCafe 1 KG',
                 list: 'Search Results',
                 brand: 'BAZZARA',
                 category: 'KAWA ZIARNISTA\/Bazzara',
@@ -7417,7 +7417,7 @@
             });
             ga('iaiTracker.ec:addImpression', {
                 id: '29',
-                name: 'Kawa ziarnista Bazzara DODICIGRANCRU 1kg',
+                name: 'Kawa ziarnista MkCafe 1 KG',
                 list: 'Search Results',
                 brand: 'BAZZARA',
                 category: 'KAWA ZIARNISTA\/Bazzara',
@@ -7960,7 +7960,7 @@
                     },
                     {
                         item_id: '29',
-                        item_name: 'Kawa ziarnista Bazzara DODICIGRANCRU 1kg ',
+                        item_name: 'Kawa ziarnista MkCafe 1 KG ',
                         discount: 39.6,
                         index: 2,
                         currency: 'PLN',
