--- a/temp1.html
+++ b/temp1.html
@@ -89,13 +89,13 @@
     </ul>
 </div>
 
-<div class="product position-relative col-12 col-sm-6 col-lg-4 pt-4 my-5 pb-md-5" data-product_id="16844"
+<div class="product position-relative col-12 col-sm-6 col-lg-4 pt-4  my-md-5 pb-md-5" data-product_id="16844"
     data-product_page="0" data-product_first="true">
     <div class="graph-background p-2 d-none" style="display: none;">
         <div class="graph-title">Najedź myszką by poznać włąściwości smaku</div>
         <div><canvas class="radar-chart" width="100%" height="100%" style=""></canvas></div>
     </div><a class="product__icon d-flex justify-content-center align-items-center" data-product-id="16844"
-        href="https://mkcafe.iai-shop.com/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3"
+        href="/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3"
         title="ZESTAW - Kawa ziarnista MK Cafe Fresh Mexico Origin 2x1kg">
         <picture style="">
             <source media="(max-width: 420px)"
@@ -107,7 +107,7 @@
             </span></strong>
     </a>
     <h3><a class="product__name"
-            href="https://mkcafe.iai-shop.com/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3"
+            href="/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3"
             title="ZESTAW - Kawa ziarnista MK Cafe Fresh Mexico Origin 2x1kg" style="min-height: 39px;">ZESTAW - Kawa
             ziarnista MK Cafe Fresh Mexico Origin 2x1kg</a></h3>
     <div class="product__prices" style="min-height: 38.1875px;"><strong class="price">152,00 zł<span
@@ -213,7 +213,7 @@
     </div><a class="position-absolute product__compare_item --add btn " rel="nofollow"
         title="Kliknij, aby dodać produkt do porównania"
         style="position: absolute; transform: translate(-50%, 50%); bottom: 0;"
-        href="https://mkcafe.iai-shop.com/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3">
+        href="/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3">
         <div class="d-inline-flex justify-content-center align-items-center"><span
                 class="checkProduct">Sprawdź</span><span class="icon--right-arrow ml-2"></span></div>
     </a>
