POPRAWKI: sortowanie na prawo + obsługa braku filtrów + opisy produktu + usunąć text-decoration z product + "brak danych" wycentrować + przeliczanie na gramy + pobieranie daty palenia +

--- a/temp1.html
+++ b/temp1.html
@@ -1,224 +1,19 @@
-<div class="product__traits d-none d-md-block mt-2">
-    <ul>
-        <li class="trait"><span class="trait__name">Rodzaj: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603587-Kawa-ziarnista.html">Kawa
-                    ziarnista</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Opakowanie: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335605181-2000g.html">2000g</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Pochodzenie ziaren: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603956-Meksyk.html">Meksyk</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Skład: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603424-100-Arabika.html">100%
-                    Arabika</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Blend czy Single: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603898-Single-Jednorodne.html">Single
-                    / Jednorodne</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Stopień palenia: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603489-Sredni.html">Średni</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Zawartość kofeiny: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603492-Niska.html">Niska</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Palarnia: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603597-Polska.html">Polska</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Intensywność smaku: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609841-4.html">4</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Gorycz: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609862-2.html">2</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Kwasowość: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609878-2-5.html">2.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Słodycz: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609877-3.html">3</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Nuty kwiatowe: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609879-1-5.html">1.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Owoce cytrusowe: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609880-2-5.html">2.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Owoce pestkowe: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609881-1-5.html">1.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Owoce leśne: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609859-2.html">2</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Nuty przypraw: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609864-2.html">2</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Orzech: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609851-2-5.html">2.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Czekolada: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609871-3-5.html">3.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Karmel: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609839-3-5.html">3.5</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Polecana do: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603896-Espresso.html">Espresso</a>
+<div id="projector_dictionary">
+    <div class="dictionary__group --first --no-group">
+        <div class="dictionary__param mb-4" data-duplicate="true">
+            <div class="dictionary__name mr-1"><span class="dictionary__name_txt">Opakowanie</span></div>
+            <div class="dictionary__values">
+                <div class="dictionary__value"><span class="dictionary__value_txt">1000g</span></div>
             </div>
-        </li>
-        <li class="trait"><span class="trait__name">Wyczuwalne smaki: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603925-Czekolada.html">Czekolada</a>
-            </div>
-        </li>
-        <li class="trait"><span class="trait__name">Crema: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603920-Trwala.html">Trwała</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Sposób przygotowania: </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603888-Ekspres-kolbowy.html">Ekspres
-                    kolbowy</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Przeznaczenie : </span>
-            <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603578-Do-domu.html">Do domu</a></div>
-        </li>
-        <li class="trait"><span class="trait__name">Blog: </span>
-            <div class="trait__values"><a class="trait__value"
-                    href="/tra-pol-1335603743--KAWA-baza-wiedzy-bloglist-pol-2-html.html">/KAWA-baza-wiedzy-bloglist-pol-2.html</a>
-            </div>
-        </li>
-    </ul>
-</div>
-
-<div class="product position-relative col-12 col-sm-6 col-lg-4 pt-4  my-md-5 pb-md-5" data-product_id="16844"
-    data-product_page="0" data-product_first="true">
-    <div class="graph-background p-2 d-none" style="display: none;">
-        <div class="graph-title">Najedź myszką by poznać włąściwości smaku</div>
-        <div><canvas class="radar-chart" width="100%" height="100%" style=""></canvas></div>
-    </div><a class="product__icon d-flex justify-content-center align-items-center" data-product-id="16844"
-        href="/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3"
-        title="ZESTAW - Kawa ziarnista MK Cafe Fresh Mexico Origin 2x1kg">
-        <picture style="">
-            <source media="(max-width: 420px)"
-                srcset="/pol_is_ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg-16844.jpg"><img
-                src="/pol_il_ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg-16844.jpg"
-                alt="ZESTAW - Kawa ziarnista MK Cafe Fresh Mexico Origin 2x1kg">
-        </picture><strong class="label_icons" style=""><span class="label --new">
-                Nowość
-            </span></strong>
-    </a>
-    <h3><a class="product__name"
-            href="/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3"
-            title="ZESTAW - Kawa ziarnista MK Cafe Fresh Mexico Origin 2x1kg" style="min-height: 39px;">ZESTAW - Kawa
-            ziarnista MK Cafe Fresh Mexico Origin 2x1kg</a></h3>
-    <div class="product__prices" style="min-height: 38.1875px;"><strong class="price">152,00 zł<span
-                class="price__unit"> / szt.</span><span class="price_vat"> brutto</span></strong></div>
-    <div class="product__compare"></div>
-    <div class="product__traits d-none d-md-block mt-2">
-        <ul>
-            <li class="trait"><span class="trait__name">Rodzaj: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603587-Kawa-ziarnista.html">Kawa
-                        ziarnista</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Opakowanie: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335605181-2000g.html">2000g</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Pochodzenie ziaren: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603956-Meksyk.html">Meksyk</a>
-                </div>
-            </li>
-            <li class="trait"><span class="trait__name">Skład: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603424-100-Arabika.html">100%
-                        Arabika</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Blend czy Single: </span>
-                <div class="trait__values"><a class="trait__value"
-                        href="/tra-pol-1335603898-Single-Jednorodne.html">Single / Jednorodne</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Stopień palenia: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603489-Sredni.html">Średni</a>
-                </div>
-            </li>
-            <li class="trait"><span class="trait__name">Zawartość kofeiny: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603492-Niska.html">Niska</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Palarnia: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603597-Polska.html">Polska</a>
-                </div>
-            </li>
-            <li class="trait"><span class="trait__name">Intensywność smaku: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609841-4.html">4</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Gorycz: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609862-2.html">2</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Kwasowość: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609878-2-5.html">2.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Słodycz: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609877-3.html">3</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Nuty kwiatowe: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609879-1-5.html">1.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Owoce cytrusowe: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609880-2-5.html">2.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Owoce pestkowe: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609881-1-5.html">1.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Owoce leśne: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609859-2.html">2</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Nuty przypraw: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609864-2.html">2</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Orzech: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609851-2-5.html">2.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Czekolada: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609871-3-5.html">3.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Karmel: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335609839-3-5.html">3.5</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Polecana do: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603896-Espresso.html">Espresso</a>
-                </div>
-            </li>
-            <li class="trait"><span class="trait__name">Wyczuwalne smaki: </span>
-                <div class="trait__values"><a class="trait__value"
-                        href="/tra-pol-1335603925-Czekolada.html">Czekolada</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Crema: </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603920-Trwala.html">Trwała</a>
-                </div>
-            </li>
-            <li class="trait"><span class="trait__name">Sposób przygotowania: </span>
-                <div class="trait__values"><a class="trait__value"
-                        href="/tra-pol-1335603888-Ekspres-kolbowy.html">Ekspres kolbowy</a></div>
-            </li>
-            <li class="trait"><span class="trait__name">Przeznaczenie : </span>
-                <div class="trait__values"><a class="trait__value" href="/tra-pol-1335603578-Do-domu.html">Do domu</a>
-                </div>
-            </li>
-            <li class="trait"><span class="trait__name">Blog: </span>
-                <div class="trait__values"><a class="trait__value"
-                        href="/tra-pol-1335603743--KAWA-baza-wiedzy-bloglist-pol-2-html.html">/KAWA-baza-wiedzy-bloglist-pol-2.html</a>
-                </div>
-            </li>
-        </ul>
+        </div>
     </div>
-    <div class="product__traits --gfx my-2 mb-md-0">
-        <ul></ul>
-    </div><a class="position-absolute product__compare_item --add btn " rel="nofollow"
-        title="Kliknij, aby dodać produkt do porównania"
-        style="position: absolute; transform: translate(-50%, 50%); bottom: 0;"
-        href="/product-pol-16844-ZESTAW-Kawa-ziarnista-MK-Cafe-Fresh-Mexico-Origin-2x1kg.html?query_id=3">
-        <div class="d-inline-flex justify-content-center align-items-center"><span
-                class="checkProduct">Sprawdź</span><span class="icon--right-arrow ml-2"></span></div>
-    </a>
 </div>
 
+// dodać datę palenia i datę ważności z https://public.konesso.pl/?json=true&module=productInfo&id=15
+// tutaj append ceny przeliczeniowej za gram "projector_prices_wrapper" to dodać <div class="projector_prices__info">
+    // z tego pobrać cenę #projector_price_value
+    waga: <div class="traits__item mb-4 d-flex" data-hide="false"><span
+            class="traits__label mr-1">Opakowanie</span><span class="traits__values"><a class="traits__value"
+                href="/tra-pol-1335603658-1000g.html">1000g</a></span></div>
 
-['intensywność samku', 'Słodycz', 'Kwasowatość'', 'Gorycz', 'Nuty kwiatowe', 'Owoce cytrusowe', 'Owoce pestkowe', 'Owoce
-leśne', 'Nuty przypraw', 'Orzech', 'Czekolada', 'Karmel]
+    // endpoint https://public.konesso.pl/?json=true&module=productInfo&id=15
