ukrywanie linków po refresh

--- a/temp.html
+++ b/temp.html
@@ -1,29 +1,60 @@
-<div class="container mb-5">
-    <div class="row">
-        <div class="col-lg-3 col-md-6 col-12 my-3"><a href="/UNIKATOWA-PALARNIA-KAWY-cabout-pol-251.html"
-                class="image-block text-left">
-                <picture><img src="/data/designs/xsl/11_1/gfx/assets/blog-1.jpg" alt="Description"></picture>
-                <div class="overlay"></div><span class="title-text text-uppercase">Unikatowa Manufaktura</span><span
-                    class="btn-like">Dowiedz się więcej <i class="icon-angle-right ml-2"></i></span>
-            </a></div>
-        <div class="col-lg-3 col-md-6 col-12 my-3"><a
-                href="/data/include/cms/MkFresh/MK_EFOLDER_2021_last.pdf?v=1703082120124" class="image-block text-left">
-                <picture><img src="/data/designs/xsl/11_1/gfx/assets/blog-2.jpg" alt="Description"></picture>
-                <div class="overlay"></div><span class="title-text text-uppercase">Oferta prezentowa</span><span
-                    class="btn-like">Sprawdź<i class="icon-angle-right ml-2"></i></span>
-            </a></div>
-        <div class="col-lg-3 col-md-6 col-12 my-3"><a href="/pol_m_KAWY-8811.html" class="image-block text-left">
-                <picture><img src="/data/designs/xsl/11_1/gfx/assets/blog-3.jpg" alt="Description"></picture>
-                <div class="overlay"></div><span class="title-text text-uppercase">znajdź kawę dla siebie</span><span
-                    class="btn-like">Odkryj kawy<i class="icon-angle-right ml-2"></i></span>
-            </a></div>
-        <div class="col-lg-3 col-md-6 col-12 my-3">
-            <a href="/Porady-i-przepisy-bloglist-pol-40.html" class="image-block text-left">
-                <picture><img src="/data/designs/xsl/11_1/gfx/assets/blog-4.jpg" alt="Description"></picture>
-                <div class="overlay"></div>
-                <span class="title-text text-uppercase">Porady Baristy</span>
-                <span class="btn-like">Sprawdź<i class="icon-angle-right ml-2"></i></span>
-            </a>
-        </div>
+<nav id="menu_categories" class="wide"><button type="button" class="navbar-toggler"><i
+            class="icon-reorder"></i></button>
+    <div class="navbar-collapse" id="menu_navbar">
+        <ul class="navbar-nav mx-md-n2">
+            <li class="nav-item"><a href="/pol_m_KAWY-8811.html" target="_self" title="KAWY" class="nav-link"
+                    data-visited="true">KAWY</a>
+                <ul class="navbar-subnav --cols2" style="left: -38px;">
+                    <li class="nav-item nav-merge">
+                    <li class="nav-item"><a href="/pol_n_KAWY_Pochodzenie-ziaren-8812.html" target="_self"
+                            title="Pochodzenie ziaren" class="nav-link">Pochodzenie ziaren</a>
+                        <ul class="navbar-subsubnav">
+                            <li class="nav-item"><a href="/pol_m_KAWY_Pochodzenie-ziaren_Brazylia-8813.html"
+                                    target="_self" title="Brazylia" class="nav-link">Brazylia</a></li>
+                            <li class="nav-item"><a href="/pol_m_KAWY_Pochodzenie-ziaren_Meksyk-8814.html"
+                                    target="_self" title="Meksyk" class="nav-link">Meksyk</a></li>
+                            <li class="nav-item"><a href="/pol_m_KAWY_Pochodzenie-ziaren_Indie-8817.html" target="_self"
+                                    title="Indie" class="nav-link">Indie</a></li>
+                            <li class="nav-item"><a href="/pol_m_KAWY_Pochodzenie-ziaren_Blend-8855.html" target="_self"
+                                    title="Blend" class="nav-link">Blend</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="/pol_n_KAWY_Przeznaczenie-8818.html" target="_self"
+                            title="Przeznaczenie" class="nav-link">Przeznaczenie</a>
+                        <ul class="navbar-subsubnav">
+                            <li class="nav-item"><a href="/pol_m_KAWY_Przeznaczenie_Ekspres-cisnieniowy-8819.html"
+                                    target="_self" title="Ekspres ciśnieniowy" class="nav-link">Ekspres ciśnieniowy</a>
+                            </li>
+                            <li class="nav-item"><a href="/pol_m_KAWY_Przeznaczenie_Frenchpress-8821.html"
+                                    target="_self" title="Frenchpress" class="nav-link">Frenchpress</a></li>
+                            <li class="nav-item"><a href="/pol_m_KAWY_Przeznaczenie_Kawiarka-8822.html" target="_self"
+                                    title="Kawiarka" class="nav-link">Kawiarka</a></li>
+                        </ul>
+                    </li>
+            </li>
+            <li class="nav-item nav-merge">
+            <li class="nav-item"><a href="/pol_n_KAWY_Wielkosc-opakowania-8823.html" target="_self"
+                    title="Wielkość opakowania" class="nav-link">Wielkość opakowania</a>
+                <ul class="navbar-subsubnav">
+                    <li class="nav-item"><a href="/pol_m_KAWY_Wielkosc-opakowania_1kg-8824.html" target="_self"
+                            title="1kg" class="nav-link">1kg</a></li>
+                    <li class="nav-item"><a href="/pol_m_KAWY_Wielkosc-opakowania_Wielopaki-8827.html" target="_self"
+                            title="Wielopaki" class="nav-link">Wielopaki</a></li>
+                </ul>
+            </li>
+            </li>
+        </ul>
+        <hr class="menu-item-underline">
+        </li>
+        <li class="nav-item"><a href="/Promocja-spromo-pol.html" target="_self" title="PROMOCJE"
+                class="nav-link">PROMOCJE</a>
+            <hr class="menu-item-underline">
+        </li>
+        <li class="nav-item"><a href="/O-nas-cabout-pol-250.html" target="_self" title="O NAS" class="nav-link">O
+                NAS</a>
+            <hr class="menu-item-underline">
+        </li>
+        </ul><a href="/Porady-i-przepisy-bloglist-pol-40.html" class="text-l nav-link">Porady i przepisy</a><a
+            href="/Blog-bloglist-pol-37.html" class="text-l nav-link">Blog</a>
     </div>
-</div>
+</nav>
